@@ -12,11 +12,11 @@ local DISABLED_FONT_COLOR = DISABLED_FONT_COLOR
 
 local ChangeLogData = {
 	"Changes:",
-		"• MASSIVE Code Cleanup. AAGAAAAAAIN",
-		"• Prevent an error in Social Queue",
-		"• Added a Reset Module (Information -> Reset)",
+		"• Small Layout Update. (Again, if you want it, do the install!",
+		"• Dont load the GCD Module on Classic or TBC >.>",
+		"• Fixed a taint... gosh, that was a hard one",
 		"• Fixed some errors here and there",
-		"• Options looks a bit different now!",
+		"• Code changes there and here",
 
 	" ",
 	"Notes:",
