@@ -1,8 +1,7 @@
 ### Changes ###
 
-  * MASSIVE Code Cleanup. AAGAAAAAAIN
-  * Prevent an error in Social Queue
-  * Added a Reset Module (Information -> Reset)
+  * Small Layout Update. (Again, if you want it, do the install!
+  * Dont load the GCD Module on Classic or TBC >.>
+  * Fixed a taint... gosh, that was a hard one
   * Fixed some errors here and there
-  * Updated Details Profile (No one Pixel texture anymore)
-  * Options looks a bit different now!
+  * Code changes there and here
